[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Lightweight network intrusion detection system — Snort alternative in pure Rust"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
