[package]
name = "sentinel"
version = "0.2.0"
edition = "2021"
description = "Lightweight network intrusion detection system — Snort alternative in pure Rust"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
aho-corasick = "1"
